tests/sources/invalid/classes/class_def_syntax_errors.fire
// Malformed class definitions.

// Missing class name
class {  //~ ERROR FS-PARSE-0010 @7
    int32 v;  //~ ERROR FS-PARSE-0010 @12
}

// Missing generic type parameter name
class G1<> {  //~ ERROR FS-PARSE-0010 @10
    int32 v;  //~ ERROR FS-PARSE-0010 @12
}

// Missing '>' to close class type parameters
class G2<T {  //~ ERROR FS-PARSE-0010 @12
    int32 v;  //~ ERROR FS-PARSE-0010 @12
}

// Missing base class name after 'from'
class D1 from {  //~ ERROR FS-PARSE-0010 @15
    int32 v;  //~ ERROR FS-PARSE-0010 @12
}

// Class inheriting from itself
class S1 from S1 {  //~ ERROR FS-PARSE-0012 @15
    int32 v;

    S1() {
        this.v = 1;
    }
}

// Missing '{' to start class body
class N1
int32 topLevel = 1;  //~ ERROR FS-PARSE-0010 @1

// Member that is not a type
class M1 {
    ! bogus;  //~ ERROR FS-PARSE-0010 @5
    int32 v;

    M1() {
        this.v = 1;
    }
}

// Static constructor is rejected
class C1 {
    int32 v;

    static C1() {  //~ ERROR FS-PARSE-0012 @12
        this.v = 1;
    }
}

// Receiver must be 'this' after '&'
class R1 {
    int32 v;

    R1() {
        this.v = 1;
    }

    int32 get(&other) {  //~ ERROR FS-PARSE-0010 @16
        return 1;
    }
}

// 'owned' receiver must be 'this'
class R2 {
    int32 v;

    R2() {
        this.v = 1;
    }

    int32 take(owned other) {  //~ ERROR FS-PARSE-0010 @16
//~^ ERROR FS-PARSE-0010 @22
        return 1;
    }
}

// Method parameter type invalid
class P1 {
    int32 v;

    P1() {
        this.v = 1;
    }

    int32 m(&this, ! x) {  //~ ERROR FS-PARSE-0010 @20
//~^ ERROR FS-PARSE-0010 @22
        return 1;
    }
}

// Array parameters are not supported for methods
class P2 {
    int32 v;

    P2() {
        this.v = 1;
    }

    int32 m(&this, int32[] xs) {  //~ ERROR FS-PARSE-0012 @25
        return 1;
    }
}

// Missing method parameter name
class P3 {
    int32 v;

    P3() {
        this.v = 1;
    }

    int32 m(&this, int32) {  //~ ERROR FS-PARSE-0010 @25
        return 1;
    }
}
